[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[isort]
profile = black
known_first_party = flexcv

[black]
line-length = 89
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''