[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flexcv"
version = "0.1.0"
description = "An easy to use and flexible package to perform cross validation in python."
readme = "README.md"
authors = [{ name = "Fabian Rosenthal" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["machine learning", "cross validation"]
dependencies = [
  "matplotlib == 3.8.0",
  "neptune == 1.8.2",
  "numpy == 1.23.4",
  "openpyxl == 3.1.2",
  "optuna == 3.4.0",
  "pandas == 1.5.1",
  "scikit_learn == 1.3.2",
  "seaborn == 0.13.0",
  "shap == 0.43.0",
  "statsmodels == 0.14.0",
  "tqdm == 4.66.1",
  "xgboost == 2.0.1",
  "mkdocstrings-python",
]
requires-python = ">=3.10"


[project.urls]
"Homepage" = "https://github.com/radlfabs/flexcv"
"Bug Tracker" = "https://github.com/radlfabs/flexcv/issues"
"Docs" = "https://radlfabs.github.io/flexcv"

[tool.setuptools.packages.find]
where = ["."]
include = ["flexcv*"]
exclude = ["dev_env*"]  # empty by default
namespaces = false  # true by default

[isort]
profile = "black"
known_first_party = "flexcv"

[black]
line-length = 89
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | test
)/
'''
