[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flexcv"
version = "v23.0.1-beta"
description = "Easy and flexible nested cross validation for tabular data in python."
readme = "README.md"

authors = [
    { name = "Fabian Rosenthal", email = "rosenthal.fabian@gmail.com" },
    { name = "Patrick Blättermann" },
    { name = "Siegbert Versümer" }
]

license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["machine learning", "cross validation"]

dependencies = [
  "matplotlib >= 3.5.0",
  "numpy >= 1.23.4",
  "openpyxl >= 3.1.2",
  "optuna >= 3.4.0",
  "pandas >= 1.5.1",
  "scikit_learn >= 1.3.2",
  "seaborn >= 0.13.0",
  "shap >= 0.43.0",
  "statsmodels >= 0.14.0",
  "tqdm >= 4.66.1",
  "xgboost >= 2.0.1",
  "neptune >= 1.8.2",
  "neptune-optuna >= 1.1.0",
  "neptune-xgboost >= 1.1.1",
  "neptune-sklearn >= 2.1.0",
  "pyyaml",
]
requires-python = ">=3.10,<3.12"

[project.optional-dependencies]
docs = [
  "mkdocs",
  "mkdocstrings",
  "mkdocs-material",
]
dev = [
  "bumpver",
  "pytest",
  "pytest-cov",
  "mkdocs",
  "mkdocstrings",
  "mktestdocs",
  "mkdocs-material",
  "mkdocstrings-python",
  "check-manifest",
  "pip-tools",
  "twine",
  "black",
  "isort",
]

[project.urls]
"Homepage" = "https://github.com/radlfabs/flexcv"
"Bug Tracker" = "https://github.com/radlfabs/flexcv/issues"
"Docs" = "https://radlfabs.github.io/flexcv"

[tool.setuptools.packages.find]
where = ["."]
include = ["flexcv*"]
exclude = ["dev_env*"]
namespaces = false

[isort]
profile = "black"
src_paths = ["flexcv", "test"]


[black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-rf", "--import-mode=importlib"]
filterwarnings = ["ignore:jsonschema.RefResolver is deprecated:DeprecationWarning"]

[tool.bumpver]
current_version = "v23.0.1-beta"
version_pattern = 'vYY.MINOR[.PATCH][-TAG]'
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]

"flexcv/__init__.py" = ["{version}"]
