[metadata]
name = flexcv
version = 0.1.0
author = Fabian Rosenthal
author_email = rosenthal.fabian@gmail.com
description = A easy to use and flexible package to perform cross validation in python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/radlfabs/flexcv

[options]
install_requires =
    customtkinter==5.1.3
    matplotlib==3.7.1
    numpy==1.23.2
    optuna==3.1.1
    pandas==2.0.1
    rpy2==3.5.12
    scikit_learn==1.2.2
    seaborn==0.12.2
    shap==0.41.0
    statsmodels==0.14.0
    tqdm==4.65.0
    xgboost==1.7.5
    neptune==1.6.1
    neptune-optuna
    openpyxl==3.1.2
    numba==0.56.4
