[metadata]
name = flexcv
version = 23.0.0
author = Fabian Rosenthal, Patrick Blättermann, Siegbert Versümer
author_email = rosenthal.fabian@gmail.com
description = An easy to use and flexible package to perform cross validation in python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/radlfabs/flexcv
